Added reflection essay

--- a/honors.html
+++ b/honors.html
@@ -74,6 +74,11 @@
                 <p>deepQuestion:</p>
             </a>
 
+            <a href="reflection.pdf" target="_blank">
+                <img src="document.png">
+                <p>Reflection Essay</p>
+            </a>
+
             <a href="#" id="openReadme">
                 <img src="document.png">
                 <p>README</p>
