Updated honors links to be accurate

--- a/honors.html
+++ b/honors.html
@@ -139,7 +139,7 @@
                 <p><strong><u>Research Focus:</u></strong> Human-Computer Interaction, Virtual Meetings</p>
                 <br>
                 <div class="modal-link">
-                    <a href="#">Research Project (Details Coming Soon)</a>
+                    <a href="https://github.com/Swondon/Eye2Eye">View on GitHub</a>
                 </div>
             </div>
         </div>
@@ -283,7 +283,7 @@
                 <p><strong><u>Technologies:</u></strong> Geolocation, Real-time Chat, Mobile Development</p>
                 <br>
                 <div class="modal-link">
-                    <a href="#">Gridchat App (Details Coming Soon)</a>
+                    <a href="https://devpost.com/software/gridchat">View on Devpost</a>
                 </div>
             </div>
         </div>
@@ -306,7 +306,7 @@
                 <p><strong><u>Focus:</u></strong> Mental Health, Anonymous Journaling</p>
                 <br>
                 <div class="modal-link">
-                    <a href="#">DeepQuestion App (Details Coming Soon)</a>
+                    <a href="https://devpost.com/software/deepquestion">View on Devpost</a>
                 </div>
             </div>
         </div>
