Added potluck update

--- a/honors.html
+++ b/honors.html
@@ -104,17 +104,17 @@
                     other to discuss the outcome of pots, view the pots their friends are involved in, deposit and
                     withdraw money, and much more!</p>
                 <p class="indented">Originally built as a web app in Spring of 2025, PotLuck is currently in active
-                    development and will
-                    be
-                    releasing officially on the Apple App Store.</p>
+                    development and is now out on the iOS App Store!</p>
                 <br>
                 <p><strong><u>Frontend:</u></strong>
                     HTML, CSS, JavaScript (v2 in Swift)</p>
                 <p><strong><u>Backend:</u></strong> JavaScript, SQL, Docker (v2 using Firebase)</p>
                 <br>
                 <div class="modal-link">
+                    <a href="https://potluck.support" target="_blank">View on App Store</a>
+                </div>
+                <div class="modal-link" style="margin-top: 10px;">
                     <a href="https://github.com/Swondon/PotLuck-v1">View on GitHub</a>
-
                 </div>
 
             </div>
