Fixed currently building badge

--- a/about.html
+++ b/about.html
@@ -784,6 +784,11 @@ background: linear-gradient(130deg,
                 margin: 0;
             }
 
+            .building-badge {
+                font-size: 0.9rem;
+                padding: 10px 15px;
+            }
+
             section {
                 padding: 60px 0;
             }
