Added udders to portfolio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="dropdownContent" class="dropdown-content">
                 <a id="openDeepquestion1">deepQuestion</a>
                 <a id="openEye1">Eye2Eye</a>
-                <a id="openGridchat1">Gridchat</a>
+                <a id="openGridchat1">udders.app</a>
                 <a id="openPotluck1">PotLuck</a>
                 <a id="openQuickbuck1">QuickBuck</a>
                 <a id="openWeather1">Weather Balloon</a>
@@ -74,7 +74,7 @@
         <div class="icon">
             <a href="#" id="openGridchat">
                 <img src="gridchat.png">
-                <p>Gridchat</p>
+                <p>udders</p>
             </a>
         </div>
     </div>
@@ -286,11 +286,11 @@
     <div id="gridchatModal">
         <div class="modal-content">
             <button class="close-btn" id="closeGridchat">&times;</button>
-            <h1>Gridchat</h1>
+            <h1>udders</h1>
             <div class="potluck-img-text">
                 <img src="gridchat.png">
-                <p class="indented">Gridchat is essentially a local chatroom system with each room being based on the
-                    user’s current location. Each chatroom is around a 100 m by 100 m square in a grid that covers
+                <p class="indented">udders is essentially a local chatroom system with each room being based on the
+                    user’s current location. Each chatroom is around a 150 m by 150 m square in a grid that covers
                     the world. As the user moves around, they are transferred from chatroom to chatroom based on their
                     location.
                 </p>
@@ -301,15 +301,15 @@
                     who is nearby.
                 </p>
                 <p class="indented">
-                    This app idea was initiated during HackNC 2022.
+                    This app idea was initiated during HackNC 2022 as GridChat and then rebuilt and deployed in 2025 in less than 6 hours.
                 </p>
                 <br>
                 <p><strong><u>Frontend:</u></strong>
-                    Flutter, Dart</p>
-                <p><strong><u>Backend:</u></strong> Flask, Python, SQLite, Google Cloud</p>
+                     Vite, TypeScript, Tailwind (Originally Flutter, Dart)</p>
+                <p><strong><u>Backend:</u></strong> Express.js (Originally Flask, Python, SQLite, Google Cloud)</p>
                 <br>
                 <div class="modal-link">
-                    <a href="https://devpost.com/software/gridchat">View on Devpost</a>
+                    <a href="https://udders.app/">View on udders.app</a>
                 </div>
 
             </div>
